refactorisation du code afin de supprimer du contenu dupliqué inutilement